--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile 'com.google.firebase:firebase-core:11.0.4'
     compile 'com.google.firebase:firebase-messaging:11.0.4'
     compile 'com.github.bumptech.glide:volley-integration:4.2.0'
+    compile 'com.prolificinteractive:material-calendarview:1.4.3'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
     compile 'com.github.katoro:typekit:1.0.1'
     testCompile 'junit:junit:4.12'
