--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,17 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.1'
     defaultConfig {
         applicationId "com.mobile.a21line.a21line"
         minSdkVersion 18
-        targetSdkVersion 26
-        versionCode 10
-        versionName "1.9"
+        targetSdkVersion 28
+        versionCode 15
+        versionName "2.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
+        useLibrary 'org.apache.http.legacy'
     }
     buildTypes {
         release {
@@ -28,32 +29,34 @@ android {
     aaptOptions {
         cruncherEnabled=false
     }
+
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.0.2'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:design:26.0.2'
-    compile 'com.android.support:multidex:1.0.1'
-    compile 'com.google.code.gson:gson:2.8.1'
-    compile 'com.android.support:recyclerview-v7:26.0.2'
-    compile 'com.android.support:cardview-v7:26.0.2'
-    compile 'com.google.android.gms:play-services-places:11.0.4'
-    compile 'com.google.android.gms:play-services-maps:11.0.4'
-    compile 'com.google.android.gms:play-services-location:11.0.4'
-    compile 'com.google.firebase:firebase-core:11.0.4'
-    compile 'com.google.firebase:firebase-messaging:11.0.4'
-    compile 'com.github.bumptech.glide:volley-integration:4.2.0'
+    implementation 'com.android.support:appcompat-v7:28+'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:design:28+'
+    implementation 'com.android.support:multidex:1.0.1'
+    implementation 'com.google.code.gson:gson:2.8.1'
+    implementation 'com.android.support:recyclerview-v7:28+'
+    implementation 'com.android.support:cardview-v7:28+'
+    implementation 'com.google.android.gms:play-services-places:11.0.4'
+    implementation 'com.google.android.gms:play-services-maps:11.0.4'
+    implementation 'com.google.android.gms:play-services-location:11.0.4'
+    implementation 'com.google.firebase:firebase-core:11.0.4'
+    implementation 'com.google.firebase:firebase-messaging:11.0.4'
+    implementation 'com.github.bumptech.glide:volley-integration:4.2.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
-    compile 'com.prolificinteractive:material-calendarview:1.4.3'
-    compile 'com.github.omadahealth:swipy:1.2.3@aar'
-    compile 'com.github.katoro:typekit:1.0.1'
-    compile 'com.squareup:otto:1.3.7'
-    testCompile 'junit:junit:4.12'
+    implementation 'com.prolificinteractive:material-calendarview:1.4.3'
+    implementation 'com.github.omadahealth:swipy:1.2.3@aar'
+    implementation 'com.github.katoro:typekit:1.0.1'
+    implementation 'com.squareup:otto:1.3.7'
+    testImplementation 'junit:junit:4.12'
 }
 
 apply plugin: 'com.google.gms.google-services'
+
